<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="8dip">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/activity_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_label"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/temp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:text="@string/temp_label"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/temp_value"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/temp"
            android:layout_marginLeft="10dp"
            android:background="@color/grey"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/humidity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:text="@string/humidity_label"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/humidity"
            android:layout_marginLeft="10dp"
            android:background="@color/grey"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/activity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:text="@string/activity_label"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/activity_value"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/activity"
            android:layout_marginLeft="10dp"
            android:background="@color/grey"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/counter"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:text="@string/counter_label"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <EditText
            android:id="@+id/counter_value"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/counter"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:inputType="number"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <Button
            android:id="@+id/btn_generate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/btn_generate_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:onClick="generateTH"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/yellow"
            android:text="@string/btn_cancel_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:onClick="cancelAsyncTask"
            />
        <Button
            android:id="@+id/btn_closeApp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/red"
            android:text="@string/btn_closeApp_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:onClick="finishMainActivity"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:text="Output"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:padding="4dip"
        android:typeface="monospace"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/async_task_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:padding="4dip"
                android:typeface="monospace"
                />
        </ScrollView>
    </RelativeLayout>


</LinearLayout>
